# open-aasx-index

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SOURCES.yml  pyproject.toml
.github/workflows/: ci.yml  pr_validate.yml  weekly_harvest.yml
data/: catalog.ndjson
data/schema/: catalog.schema.json
docs/plans/: 2026-02-01-readme-redesign.md
harvest/: __init__.py  __main__.py  config.py  downloader.py  extract.py  publish.py  rate_limiter.py  storage.py  verify.py
harvest/sources/: __init__.py  commoncrawl.py  github.py  seeds.py  sitemap.py
public/: catalog.csv  catalog.json  stats.json
site/: index.html  package-lock.json  package.json  vite.config.ts
site/src/: App.tsx  main.tsx
site/src/components/: Layout.tsx
site/src/hooks/: useCatalog.ts
site/src/pages/: AssetPage.tsx  HomePage.tsx
site/src/types/: catalog.ts
tests/: __init__.py  test_downloader.py  test_extract.py  test_fixtures.py  test_publish.py  test_sources_commoncrawl.py  test_sources_github.py  test_sources_seeds.py  test_sources_sitemap.py  test_verify.py
tests/fixtures/: generate_fixtures.py  parseable.aasx  valid.aasx
